--- a/error.html
+++ b/error.html
@@ -13,22 +13,22 @@
       <tr style="width:100%">
         <td>
           <table align="center" width="100%" border="0" cellPadding="0" cellSpacing="0" role="presentation"
-            style="border-radius:20px 20px 0 0;background-color:#107f8c;padding-top:28px;padding-right:30px;padding-left:30px">
+            style="border-radius:20px 20px 0 0;background-color:#FFBDC5;padding-top:28px;padding-right:30px;padding-left:30px">
             <tbody>
               <tr>
                 <td>
                   <p
-                    style="font-size:36px;line-height:36px;margin:0;color:#f2f4f7;font-family:Roboto, sens-serif;font-weight:700">
+                    style="font-size:36px;line-height:42px;margin:0;color:#333F48;font-family:Roboto, sens-serif;font-weight:700">
                     SBC. Заказ кампаний</p>
                   <p
-                    style="font-size:30px;line-height:34px;margin:0;color:#f2f4f7;font-family:Roboto, sens-serif;padding-top:30px;padding-bottom:80px;font-weight:700">
-                    Генерация ссылок по опросу выполнена</p>
+                    style="font-size:30px;line-height:34px;margin:0;color:#333F48;font-family:Roboto, sens-serif;padding-top:30px;padding-bottom:40px;font-weight:700">
+                    ВНИМАНИЕ!!! Генерация ссылок по опросу не выполнена</p>
                 </td>
               </tr>
             </tbody>
           </table>
           <table align="center" width="100%" border="0" cellPadding="0" cellSpacing="0" role="presentation"
-            style="background-color:#107f8c">
+            style="background-color:#FFBDC5">
             <tbody>
               <tr>
                 <td>
@@ -59,11 +59,15 @@
                           <p
                             style="font-size:19px;line-height:22px;margin:0;padding-top:22px;padding-bottom:22px;font-family:Roboto, sens-serif;color:#333F48;font-weight:400">
                             По кампании<!-- --> <b>${campaign_name}<!-- --> <!-- -->${list_name}</b>, сценарий
-                            <b>${scenario_name}</b> завершен процесс обогащения персональными ссылками из АС Сберопрос
-                            по опросу<!-- --> <b>${name_opros}</b>.</p>
+                            <b>${scenario_name}<!-- --> НЕ ВЫПОЛНЕН</b> процесс обогащения персональными ссылками из АС
+                            Сберопрос по опросу<!-- --> <b>${name_opros}</b>. Причина:<!-- --> <b>{$check_code}<!-- -->
+                              - <!-- -->{$check_message}</b></p>
                           <p
                             style="font-size:19px;line-height:22px;margin:0;font-family:Roboto, sens-serif;color:#333F48;font-weight:400">
                             Сценарий доступен для запуска в канал.</p>
+                          <p
+                            style="font-size:19px;line-height:22px;margin:0;padding-top:22px;padding-bottom:22px;font-family:Roboto, sens-serif;color:#333F48;font-weight:400">
+                            Сценарий <b>НЕ доступен</b> для запуска в канал.</p>
                         </td>
                       </tr>
                     </tbody>
