--- a/success.html
+++ b/success.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" />
 </head>
 
-<body style="font-family:Roboto, sens-serif;background-color:ffffff">
+<body style="font-family:Roboto, sans-serif;background-color:ffffff">
   <table align="center" width="100%" border="0" cellPadding="0" cellSpacing="0" role="presentation"
     style="max-width:37.5em">
     <tbody>
@@ -18,10 +18,10 @@
               <tr>
                 <td>
                   <p
-                    style="font-size:36px;line-height:36px;margin:0;color:#f2f4f7;font-family:Roboto, sens-serif;font-weight:700">
+                    style="font-size:36px;line-height:36px;margin:0;color:#f2f4f7;font-family:Roboto, sans-serif;font-weight:700">
                     SBC. Заказ кампаний</p>
                   <p
-                    style="font-size:30px;line-height:34px;margin:0;color:#f2f4f7;font-family:Roboto, sens-serif;padding-top:30px;padding-bottom:80px;font-weight:700">
+                    style="font-size:30px;line-height:34px;margin:0;color:#f2f4f7;font-family:Roboto, sans-serif;padding-top:30px;padding-bottom:80px;font-weight:700">
                     Генерация ссылок по опросу выполнена</p>
                 </td>
               </tr>
@@ -54,15 +54,15 @@
                       <tr style="width:100%">
                         <td data-id="__react-email-column">
                           <p
-                            style="font-size:19px;line-height:22px;margin:0;color:#333F48;font-family:Roboto, sens-serif;font-weight:700">
+                            style="font-size:19px;line-height:22px;margin:0;color:#333F48;font-family:Roboto, sans-serif;font-weight:700">
                             Добрый день!</p>
                           <p
-                            style="font-size:19px;line-height:22px;margin:0;padding-top:22px;padding-bottom:22px;font-family:Roboto, sens-serif;color:#333F48;font-weight:400">
+                            style="font-size:19px;line-height:22px;margin:0;padding-top:22px;padding-bottom:22px;font-family:Roboto, sans-serif;color:#333F48;font-weight:400">
                             По кампании<!-- --> <b>${campaign_name}<!-- --> <!-- -->${list_name}</b>, сценарий
                             <b>${scenario_name}</b> завершен процесс обогащения персональными ссылками из АС Сберопрос
                             по опросу<!-- --> <b>${name_opros}</b>.</p>
                           <p
-                            style="font-size:19px;line-height:22px;margin:0;font-family:Roboto, sens-serif;color:#333F48;font-weight:400">
+                            style="font-size:19px;line-height:22px;margin:0;font-family:Roboto, sans-serif;color:#333F48;font-weight:400">
                             Сценарий доступен для запуска в канал.</p>
                         </td>
                       </tr>
